--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -48,10 +48,10 @@
         android:id="@+id/backBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="119dp"
+        android:layout_marginTop="20dp"
         android:text="@string/backBtn"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/aboutCard"
-        app:layout_constraintStart_toStartOf="@+id/aboutCard" />
+        app:layout_constraintStart_toStartOf="@+id/aboutCard"
+        app:layout_constraintTop_toBottomOf="@+id/aboutCard" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
